Made string changes to Privacy Policy based on the feedback of Ross and Paul.

--- a/au/tos-and-pp-en.html
+++ b/au/tos-and-pp-en.html
@@ -31,9 +31,9 @@
 
         <!-- TOS START -->
         <a name="terms"></a>
-        <h1><strong>Moneytree | Terms of Service</strong></h1>
+        <h1><strong>Moneytree | Terms of Use</strong></h1>
         <div class="rounded-rect">
-          <p>These terms of use (Terms) govern your use of Moneytree’s Products & Services. </br>Any words in capital letters in this document are explained in the section “Words with Special Meaning” at the bottom of the page.</p>
+          <p>These terms of use <strong>(Terms)</strong> govern your use of Moneytree’s Products & Services. </br>Any words in capital letters in this document are explained in the section “Words with Special Meaning” at the bottom of the page.</p>
 
           <h2>Binding Agreement</h2>
           <ol type="1">
@@ -217,7 +217,7 @@
               </tr>
             </table>
 
-            <p>This document was last updated 12 April 2017</p>
+            <p>This document was last updated 13 April 2017</p>
           </div>
           <p><a href="#top">Back to top</a></p>
         </div>
@@ -225,7 +225,7 @@
         <h1><strong>Moneytree | Privacy Policy</strong></h1>
         <div class="rounded-rect">
           <p><strong>Special Note for Beta Testers:</strong></p>
-          <p>During the Moneytree Australian Beta Program, your Personal Information will be stored on servers located in Japan. In the period prior to the Australian service launch, scheduled for the end of May 2017, your Personal Information will be migrated to servers in Australia.</p>
+          <p>During the Moneytree Australian Beta Program, your Financial Personal Information will be stored on servers located in Japan and some customer service information on servers in the United States. In the period prior to the Australian service launch, scheduled for the end of May 2017, your Personal Information will be migrated to servers in Australia.</p>
           <p>If you do not agree to this interim arrangement, you should wait until our full launch before using Moneytree in Australia. From that point onwards, Personal Information from Australian customers will be stored on servers located in Australia if your Moneytree account region has been set to Australia or New Zealand.</p>
 
           <h2>Moneytree | Privacy Policy</h2>
@@ -240,7 +240,7 @@
             <li>We may change these Terms from time to time and will notify you of any material amendments at least one month in advance, to your registered email address or through our Company Website or Twitter Account. If you do not accept these amendments then you may cease use of our Products & Services. Otherwise your continued use is deemed acceptance of the amendments.</li>
             <li>We may at out discretion discontinue any of our Products & Services, in which case we will also provide you with at least one months’ advance notice via the notification methods listed above.</li>
           </ol>
-          <ul>
+          <ol type="1">
             <li class="title"><strong>TRUSTe Privacy Program</strong></li>
             <p>Moneytree is a licensee of the TRUSTe Privacy Program. TRUSTe is an organisation whose mission is to build users' trust and confidence in the use of the internet by providing privacy compliance management and certification services. Because we want to demonstrate our commitment to your privacy and the security of your Personal Information, we have submitted our information handling practices for review by TRUSTe. For details of this certification, you will find further information here [insert hyperlink to TRUSTe certification details].</p>
             <li class="title"><strong>Collection of Personal Information</strong></li>
@@ -304,7 +304,7 @@
               <li>Within a secure and private computing environment maintained by competent and trusted third party service providers, upon which our Products & Services are built (such as Amazon AWS and Heroku).</li>
             </ol>
             <li class="title"><strong>Overseas Disclosure</strong></li>
-            <p>If your Moneytree account region is set to Australia or New Zealand, your Personal Information will be stored on servers located in Australia and will not be transmitted overseas (except for the limited purpose set out below). <br> <br>  By setting your account region to any region other than Australia or New Zealand, you agree to your Personal Information being stored in that location, and that certain protective provisions of the Privacy Act (for example APP 8.1) will not apply. <br> <br>   For technical support purposes, Moneytree staff may access your Personal Information from Japan (where our head office is located), always in accordance with this Privacy Policy and the Privacy Act (including the APPs).</p>
+            <p>If your Moneytree account region is set to Australia or New Zealand, your Personal Information will be stored on servers located in Australia and will not be transmitted overseas (except for the limited purpose set out below). <br> <br>  By setting your account region to any region other than Australia or New Zealand, you agree to your Personal Information being stored in that location, and that certain protective provisions of the Privacy Act (for example APP 8.1) will not apply. <br> <br>   For technical support purposes, Moneytree staff may access your Personal Information from Japan (where our head office is located), and some data relating to your use of our Products & Services in customer support systems located in the United States. In all cases, this information will be utilized in accordance with this Privacy Policy and the Privacy Act (including the APPs).</p>
             <li class="title"><strong>Managing Your Personal Information</strong></li>
             <p>Our staff do not view or monitor your Account Information except in the following circumstances:</p>
             <ol type="a">
@@ -372,7 +372,7 @@
                 </tr>
               </table>
             </ul>
-            <p>This policy version 1.0 (AU) was last updated on 12 April 2017.</p>
+            <p>This policy version 1.0 (AU) was last updated on 13 April 2017.</p>
 
           <a name="licenses"></a>
           <h1><strong>Licenses</strong></h1>
