emove licenses that we are not using and added the ones we are based on the google sheet Rendy put together

--- a/au/tos-and-pp-en.html
+++ b/au/tos-and-pp-en.html
@@ -377,15 +377,22 @@
           <a name="licenses"></a>
           <h1><strong>Licenses</strong></h1>
           <div class="rounded-rect">
-            <p>DCIntrospect - Copyright (c) 2011 by Patrick Richards domesticcatsoftware.com</p>
+            <p>Appsome Accordion - W Siudzinski / Appsome</p>
             <p>Inflections - Copyright (c) 2010 Adam Elliot (adam@adamelliot.com)</p>
             <p>Long Weekend Dev Tools - Copyright (c) 2011 Long Weekend LLC</p>
             <p>MBProgressHUD - Copyright (c) 2009-2012 Matej Bukovinski</p>
-            <p>EGOTableViewPullRefresh - Copyright (c) 2009 enormego, based on code written by Devin Doty on 10/16/09</p>
             <p>AFNetworking - Copyright (c) 2011 Gowalla (http://gowalla.com/)</p>
-            <p>MagicalRecord - Copyright (c) 2010, Magical Panda Software, LLC</p>
             <p>US2FormValidator - Copyright (C) 2012 ustwo™</p>
-            <p>SwipeMenuListView - Copyright 2014 baoyongzhang</p>
+            <p>Mixpanel - Copyright (C) 2013 Mixpanel, Inc</p>
+            <p>SSZipArchive - Copyright (c) 2010-2015, Sam Soffes, http://soff.es</p>
+            <p>One Password - Copyright (c) 2014 AgileBits Inc.</p>
+            <p>GPUImage2 - Copyright (c) 2015, Brad Larson.</p>
+            <p>SnapKit - Copyright (c) 2011-Present SnapKit Team - https://github.com/SnapKit</p>
+            <p>RxSwift - The MIT License Copyright © 2015 Krunoslav Zaher All rights reserved.</p>
+            <p>MTStackViewController - Copyright (c) 2013 WillowTree Apps, Inc.</p>
+            <p>Levenshtein - Rick Bourner (rick@bourner.com)</p>
+            <p>FBShimmer - Copyright (c) 2014, Facebook, Inc. All rights reserved.</p>
+
             <p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
             <p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>
             <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
@@ -408,7 +415,9 @@
             <p>EventBus - Copyright 2012 greenrobot</p>
             <p>Calligraphy - Copyright 2013 Christopher Jenkins</p>
             <p>ViewPagerIndicator - Copyright 2012 Jake Wharton, Patrik Åkerfeldt, Francisco Figueiredo Jr.</p>
+
             <p>AWS Android SDK - Copyright 2014 Amazon.com, Inc</p>
+
             <p>Timber - Copyright 2013 Jake Wharton</p>
             <p>Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.</p>
             <p>You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0</p>
